Clean up LispWriterTest of compiler warnings.